# cpp-raytracer

./: CMakeLists.txt  Readme.md
RayTracer/: CMakeLists.txt  ExampleScene.cpp  ExampleScene.hpp  Main.cpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.cpp~RF3625a00c.TMP  SceneLoader.hpp  Viewer.cpp  Viewer.hpp  WindowsResources.rc
RayTracer/Assets/: Scene.yaml
RayTracer/Engine/: BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  CheckerboardTexture.hpp  Color.cpp  Color.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  MathUtil.hpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Random.hpp  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SolidTexture.hpp  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Vector.cpp  Vector.hpp
RayTracer/Engine/Material/: DebugMaterial.cpp  DebugMaterial.hpp  DielectricMaterial.cpp  DielectricMaterial.hpp  DiffuseMaterial.cpp  DiffuseMaterial.hpp  LightMaterial.cpp  LightMaterial.hpp  ReflectiveMaterial.cpp  ReflectiveMaterial.hpp
RayTracer/Engine/Object/: BoxObject.cpp  BoxObject.hpp  MeshObject.cpp  MeshObject.hpp  PlaneObject.cpp  PlaneObject.hpp  SphereObject.cpp  SphereObject.hpp
RayTracer/Engine/Texture/: CheckerboardTexture.cpp  CheckerboardTexture.hpp  ImageTexture.cpp  ImageTexture.hpp  SolidTexture.cpp  SolidTexture.hpp
